Assistant checkpoint: Update Vercel configuration for proper client build
Assistant generated file changes:
- vercel.json: Update Vercel configuration for client build

---

User prompt:

Build Command

`npm run build` or `vite build`
Output Directory

dist
Install Command

`yarn install`, `pnpm install`, `npm install`, or `bun install`
would any of this help when i went to vercel and did it just showed upblank white screen notihg on page but on here when i run it works

--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    },
-    {
       "src": "client/*",
       "use": "@vercel/static"
+    },
+    {
+      "src": "server/index.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -18,7 +18,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "client/$1"
+      "dest": "/client/dist/$1"
     }
   ]
 }
